[package]
name = "cultivation"
version = "2.0.0"
description = "A custom launcher for anime game."
authors = ["KingRainbow44", "SpikeHD", "NotThorny"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cultivation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
args = "2.2.0"
once_cell = "1.21.3"
sysinfo = "0.37.2"
futures-util = "0.3.31"
file_diff = "1.0.0"
tokio = { version = "1.48.0", features = ["signal"] }
hudsucker = { version = "0.21", features = ["rcgen-ca", "rustls-client"], default-features = false }
dirs = "6.0.0"
reqwest = {version = "0.12.24", features = ["stream"] }
unrar = "0.5.8"
zip = "6.0.0"
sevenz-rust = "0.6.1"
simple-zip = "1.0.1"
ctrlc = "3.5.1"
getopts = "0.2.24"
open = "5.3.3"
rust-ini = "0.21.3"
rcgen = { version = "0.9", features = ["x509-parser"] }
rustls-pemfile = "1.0.0"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"

[target.'cfg(unix)'.dependencies]
sudo = "0.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
term-detect = "0.1.8"
anyhow = "1.0.100"
which = "8.0.0"
os_type = "2.6"

[target.'cfg(target_os = "linux")'.dependencies.anime-launcher-sdk]
git = "https://github.com/an-anime-team/anime-launcher-sdk.git"
tag = "1.32.0"
default-features = false
features = ["all", "genshin"]
